--- a/templates/fight.html
+++ b/templates/fight.html
@@ -22,10 +22,10 @@
               {{ heroes.player.stamina }}/{{ heroes.player.unit_class.max_stamina }}</p>
           </div>
           <div class="col align-self-center">
-            <button type="button" onclick="window.location.href='/fight/hit'" class="btn btn-success m-2">Нанести удар</button></br>
-            <button type="button" onclick="window.location.href='/fight/use-skill'" class="btn btn-danger m-2">Использовать умение</button></br>
-            <button type="button" onclick="window.location.href='/fight/pass-turn'" class="btn btn-warning m-2">Пропустить ход</button></br>
-            <button type="button" onclick="window.location.href='/fight/end-fight'" class="btn btn-secondary m-2">Завершить бой</button>
+            <button type="button" onclick="window.location.href='/fight/hit'" class="btn btn-success m-2" style="width: 300px;">Нанести удар</button></br>
+            <button type="button" onclick="window.location.href='/fight/use-skill'" class="btn btn-danger m-2" style="width: 300px;">Использовать умение</button></br>
+            <button type="button" onclick="window.location.href='/fight/pass-turn'" class="btn btn-warning m-2" style="width: 300px;">Пропустить ход</button></br>
+            <button type="button" onclick="window.location.href='/fight/end-fight'" class="btn btn-secondary m-2" style="width: 300px;">Завершить бой</button>
           </div>
           <div class="col align-self-start">
             <h2>{{ heroes.enemy.name }}</br>класс: <em>{{ heroes.enemy.unit_class.name }}</em></h2>
